[package]
name = "xlsx_merge"
version = "1.0.0"
edition = "2021"
exclude = ["tests/**/*"]

[dependencies]
"calamine" = "0.25"
"xlsxwriter" = "0.6"
glob = "0.3.1"
actix-web = "4.9"
actix-files = "0.6.6"
actix-multipart = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
env_logger = "0.11.5"
log = "0.4.22"
